apps/quotes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quotes-app
  labels:
    name: quotes-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-app
  namespace: quotes-app
spec:
  replicas: 1  # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: quotes-app
  template:
    metadata:
      labels:
        app: quotes-app
    spec:
      containers:
      - name: quotes-app
        image: ksw2137/quotes-dev  # Replace with the actual image name and tag
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: quotes-app
  namespace: quotes-app
spec:
  selector:
    app: quotes-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer  # Use "NodePort" or "ClusterIP" if LoadBalancer isn't available
